--- a/src/main/resources/templates/teacher/studentList.html
+++ b/src/main/resources/templates/teacher/studentList.html
@@ -65,6 +65,13 @@
             </table>
         </div>
     </div>
+
+    <div>
+        <a th:if="${currentPage > 0}" th:href="@{/students(page=${currentPage - 1}, size=10)}">이전</a>
+        <span th:text="${currentPage + 1} + ' / ' + ${totalPages}"></span>
+        <a th:if="${currentPage < totalPages - 1}" th:href="@{/students(page=${currentPage + 1}, size=10)}">다음</a>
+    </div>
+    <-- cursor 방식도 구현 -->
 </div>
 </body>
 </html>
